bitters bower support removed

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,6 @@
   ],
   "dependencies": {
     "bourbon": "~4.0.2",
-    "neat": "~1.7.0",
-    "bitters": "~0.10.1"
+    "neat": "~1.7.0"
   }
 }
